<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="334dp"
        android:layout_height="450dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/tituloJugador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloJugador" />

        <ImageView
            android:id="@+id/imagenJugador"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            tools:srcCompat="@android:drawable/btn_star_big_on" />

        <EditText
            android:id="@+id/nombreJugador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/nombreJugador" />

        <EditText
            android:id="@+id/fechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/fechaNacimiento" />

        <EditText
            android:id="@+id/fondoApuestas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/fondoApuestas" />

        <EditText
            android:id="@+id/cantDados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/cantDados" />

        <Button
            android:id="@+id/botonIngresar"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/botonIngresar" />

        <TextView
            android:id="@+id/textoApuestas"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/textoApuestas" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>